[4.x] Switches default JPA CDI portable extension to PersistenceExtension from JpaExtension (#7719)
* Switches default JPA CDI portable extension to PersistenceExtension from JpaExtension

Signed-off-by: Laird Nelson <laird.nelson@oracle.com>